# mri

./: .dockerignore  .env_tmpl  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
experimental/: display_dcm.ipynb
src/: setup.py
