[tool.poetry]
name = "MRI"
version = "0.1.0"
description = "MRI Interview Project"
license = "Proprietary"
authors = ["Miroslav Mlynarik <miroslav.mlynarik@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mmlynarik/mri"
keywords = ["mri"]

[tool.poetry.dependencies]
python = ">=3.9.5,<3.11"
pandas = "1.2"
django = "4.1.2"
gunicorn = "20.1"
psycopg2-binary = "2.9"
jupyterlab = "3.2.4"
ipython = "7.29.0"
ipywidgets = "7.6.5"
python-dotenv = "0.19.2"
tqdm = "4.62.3"
click = "8.0.2"
pydicom = "2.3.1"
pillow = "9.5.0"
matplotlib = "3.7.1"
dicom2nifti = "2.4.8"
nibabel = "5.1.0"

[tool.poetry.group.dev.dependencies]
torch = "2.0.0"
pycodestyle = "2.9.1"
black = "19.10b0"
pre-commit = "2.20.0"
src = {path = "src", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 110
profile = "black"
